--- a/config.yaml.sample
+++ b/config.yaml.sample
@@ -1,23 +1,21 @@
 ---
 
-width: 20
-height: 12
+width: 48
+height: 36
 tilesize: 1
-
-# White 1 -> 5 -> 10
-# light green 2 -> -> 5 -> 0
-#
+price_per_sq_ft: 30
 
 colors: [
-'#FFFFFF',
-'#008040',
-'#008080',
+'#ECE7D4',
+'#BCCA96',
+'#107F7E',
+'#0A516C',
 ]
 
 color_weights: [
-
-[ 10, 5, 0 ],
-[ 1, 5, 5  ],
-[ 1, 5, 5  ],
+  [ 20, 20, 9, 6, 3, 0 ],
+  [ 1,  3,  3, 6, 4, 1  ],
+  [ 1,  2,  3, 4, 8, 8  ],
+  [ 0,  0,  1, 4, 7, 12  ],
 ]
 
