--- a/config.yaml.sample
+++ b/config.yaml.sample
@@ -1,9 +1,12 @@
 ---
 
+locale: 'en_US.UTF-8'
+
 width: 48
 height: 36
 tilesize: 1
-price_per_sq_ft: 30
+price_per_sq_unit: 30
+tiles_per_sq_unit: 144
 
 colors: [
 '#ECE7D4',
@@ -15,7 +18,7 @@ colors: [
 color_weights: [
   [ 20, 20, 9, 6, 3, 0 ],
   [ 1,  3,  3, 6, 4, 1  ],
-  [ 1,  2,  3, 4, 8, 8  ],
+  [ 1,  2,  3, 5, 8, 8  ],
   [ 0,  0,  1, 4, 7, 12  ],
 ]
 
