updated sample config

--- a/config.yaml.sample
+++ b/config.yaml.sample
@@ -1,12 +1,11 @@
----
-
 locale: 'en_US.UTF-8'
 
-width: 48
-height: 36
-tilesize: 1
-price_per_sq_unit: 30
-tiles_per_sq_unit: 144
+width: 60
+height: 48
+
+tile_size: 1
+sq_unit_price: 30
+smallest_unit_per_box: 12
 
 colors: [
 '#ECE7D4',
@@ -22,3 +21,4 @@ color_weights: [
   [ 0,  0,  1, 4, 7, 12  ],
 ]
 
+show_section_boundaries: false
