--- a/config.yaml.sample
+++ b/config.yaml.sample
@@ -1,10 +1,19 @@
+# Set locale for proper currency formatting
 locale: 'en_US.UTF-8'
 
+# 60 inches
 width: 60
+
+# 48 inches
 height: 48
 
+# 1-inch tiles
 tile_size: 1
+
+# $30 per sq. ft.
 sq_unit_price: 30
+
+# smallest tile is 1-inch
 smallest_unit_per_box: 12
 
 colors: [
@@ -14,6 +23,7 @@ colors: [
 '#0A516C',
 ]
 
+# weights are listed top to bottom
 color_weights: [
   [ 20, 20, 9, 6, 3, 0 ],
   [ 1,  3,  3, 6, 4, 1  ],
@@ -21,4 +31,5 @@ color_weights: [
   [ 0,  0,  1, 4, 7, 12  ],
 ]
 
+# show a border between sections in the output
 show_section_boundaries: false
